# MtG

./: AllColorGainStatsEffect.cpp  AllColorGainStatsEffect.h  AllColorLoseTrampleEffect.cpp  AllColorLoseTrampleEffect.h  CMakeLists.txt  Card.cpp  Card.h  Deal1DamageToAllCreaturesEffect.cpp  Deal1DamageToAllCreaturesEffect.h  Deal2DamageToCreatureOrPlayerEffect.cpp  Deal2DamageToCreatureOrPlayerEffect.h  DestroyCreatureEffect.cpp  DestroyCreatureEffect.h  DestroyEnchantmentEffect.cpp  DestroyEnchantmentEffect.h  DestroyLandEffect.cpp  DestroyLandEffect.h  Effect.cpp  Effect.h  Game.cpp  Game.h  ManaCost.cpp  ManaCost.h  Player.cpp  Player.h  README.md  ReturnDiscardToHandEffect.cpp  ReturnDiscardToHandEffect.h  TargetGainTrampleEffect.cpp  TargetGainTrampleEffect.h  TargetLoseFirstStrikeEffect.cpp  TargetLoseFirstStrikeEffect.h  creatureCard.cpp  creatureCard.h  enchantmentCard.cpp  enchantmentCard.h  landCard.cpp  landCard.h  main.cpp  sorceryCard.cpp  (+1 more)
